# Reliure

./: Cargo.toml
src/: main.rs
src/controllers/: auth_controller.rs  default_controller.rs  mod.rs
src/db_manager/: mod.rs
src/db_manager/entities/: author.rs  author_series.rs  category.rs  document.rs  document_tag.rs  genre.rs  genre_document.rs  mod.rs  schema.rs  series.rs  tag.rs  user.rs
src/document_scanner/: mod.rs
src/services/: user_service.rs
