[package]
name = "Reliure"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = "0.4.39"
derive-new = "0.7.0"
rusqlite = {version = "0.32.1", features = ["bundled"]}
serde = { version = "1.0.216", features = ["derive"] }
tokio = {version = "1.42.0", features = ["full","macros", "rt-multi-thread"]}
serde_json = "1.0.133"
sha-crypt = "0.5.0"
time = "0.3.37"
tower-sessions = "0.13.0"
jsonwebtoken = "8"
tower = "0.5.2"
